plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.2'
	id 'io.spring.dependency-management' version '1.1.2'
}

group = 'com.ccoa'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation (// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web
			implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.1.2'
	){

	}
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.1.2'

	implementation 'org.jetbrains:annotations:24.0.0'
	//runtimeOnly 'com.mysql:mysql-connector-j'

	implementation 'org.springframework.boot:spring-boot-starter-security:3.1.2'
	implementation 'com.auth0:java-jwt:4.4.0'
	compileOnly 'org.projectlombok:lombok:1.18.28'
	annotationProcessor 'org.projectlombok:lombok:1.18.28'

	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	implementation 'org.springframework:spring-web:6.0.11'


	implementation 'io.jsonwebtoken:jjwt:0.7.0'
	implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'

	implementation 'org.postgresql:postgresql:42.6.0'


	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
	implementation group: 'com.tngtech.archunit', name: 'archunit', version: '1.1.0'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.7.0'
	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
	implementation group: 'com.h2database', name: 'h2', version: '2.2.220'
	implementation group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.2'
	compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
